--- a/index.html
+++ b/index.html
@@ -558,7 +558,7 @@ body.dark span:not(.material-icons) {
         </div>
 
         <div class="p-6 text-center">
-            <p class="text-[9px] text-slate-400 font-medium">Versi Aplikasi 2.0.4 • Puri Agung 2 Digital</p>
+            <p class="text-[9px] text-slate-400 font-medium">&copy; puriagung2.com</p>
         </div>
 
     </div>
