--- a/index.html
+++ b/index.html
@@ -2450,7 +2450,7 @@ function updateUserInfoDisplay() {
     
     // Tampilan: HALO JOKO S • PETUGAS RT 04
     if (textElement) {
-        textElement.innerHTML = `HALO: <span class="text-indigo-600 font-black">${nama.toUpperCase()}</span> • ${roleName} ${rtInfo}`;
+        textElement.innerHTML = `Hai Pak <span class="text-indigo-600 font-black">${nama.toUpperCase()}</span> `;
     }
 }
 
