--- a/index.html
+++ b/index.html
@@ -182,7 +182,13 @@ body.dark span:not(.material-icons) {
     @keyframes fadeIn { from { opacity: 0; } to { opacity: 1; } }
 
     .login-card { background: white; width: 100%; max-width: 400px; padding: 40px; border-radius: 40px; box-shadow: 0 20px 50px rgba(0,0,0,0.05); text-align: center; }
-    
+    @keyframes slideUp {
+    from { opacity: 0; transform: translateY(20px); }
+    to { opacity: 1; transform: translateY(0); }
+}
+.animate-in {
+    animation: slideUp 0.6s cubic-bezier(0.16, 1, 0.3, 1) forwards;
+}
     .input-group { position: relative; margin-bottom: 12px; }
     .input-group .material-icons { position: absolute; left: 16px; top: 50%; transform: translateY(-50%); color: #94a3b8; font-size: 18px; }
     .material-symbols-rounded {
