--- a/index.html
+++ b/index.html
@@ -186,8 +186,12 @@ body.dark span:not(.material-icons) {
     from { opacity: 0; transform: translateY(20px); }
     to { opacity: 1; transform: translateY(0); }
 }
+    @keyframes softAppear {
+    from { opacity: 0; transform: scale(0.98) translateY(10px); }
+    to { opacity: 1; transform: scale(1) translateY(0); }
+}
 .animate-in {
-    animation: slideUp 0.6s cubic-bezier(0.16, 1, 0.3, 1) forwards;
+    animation: softAppear 0.8s cubic-bezier(0.2, 0.8, 0.2, 1) forwards;
 }
     .input-group { position: relative; margin-bottom: 12px; }
     .input-group .material-icons { position: absolute; left: 16px; top: 50%; transform: translateY(-50%); color: #94a3b8; font-size: 18px; }
@@ -489,58 +493,58 @@ body.dark span:not(.material-icons) {
     </div>
   </div>
 
-<div id="auth-container" class="fixed inset-0 z-[10002] bg-indigo-600 flex items-center justify-center overflow-hidden">
+<div id="auth-container" class="fixed inset-0 z-[10002] bg-[#EEF2FF] flex items-center justify-center overflow-hidden">
     
-    <div class="absolute inset-0 opacity-20" style="background-image: radial-gradient(#fff 1px, transparent 1px); background-size: 20px 20px;"></div>
+    <div class="absolute inset-0 opacity-40" style="background-image: radial-gradient(#A5B4FC 0.8px, transparent 0.8px); background-size: 24px 24px;"></div>
 
     <div class="absolute top-0 left-0 w-full rotate-180 leading-[0]">
-        <svg viewBox="0 0 500 150" preserveAspectRatio="none" class="h-32 w-full fill-indigo-500/50">
+        <svg viewBox="0 0 500 150" preserveAspectRatio="none" class="h-40 w-full fill-[#E0E7FF]">
             <path d="M0.00,49.98 C150.00,150.00 349.20,-50.00 500.00,49.98 L500.00,150.00 L0.00,150.00 Z"></path>
         </svg>
     </div>
 
-    <div class="relative w-full max-w-sm px-6 animate-in fade-in slide-in-from-bottom-8 duration-700">
-        <div class="bg-white/95 backdrop-blur-md rounded-[40px] p-8 shadow-2xl shadow-indigo-900/40 border border-white/20">
+    <div class="relative w-full max-w-sm px-6 animate-in">
+        <div class="bg-white/80 backdrop-blur-xl rounded-[40px] p-8 shadow-xl shadow-indigo-100/50 border border-white">
             
             <div class="flex justify-center -mt-16 mb-6">
-                <div class="bg-white p-4 rounded-[2rem] shadow-lg">
+                <div class="bg-white p-4 rounded-[2rem] shadow-sm border border-indigo-50">
                     <img src="https://raw.githubusercontent.com/masjokos/puriagung2/refs/heads/main/logopuriagung2.png" 
                          alt="Logo" class="w-16 h-16 object-contain">
                 </div>
             </div>
 
             <div class="text-center mb-8">
-                <h1 class="text-2xl font-black text-slate-800 tracking-tight">E-WARGA <span class="text-indigo-600">RW6</span></h1>
-                <p class="text-xs font-bold text-slate-400 uppercase tracking-widest mt-1">Puri Agung 2 Digital</p>
+                <h1 class="text-2xl font-black text-slate-700 tracking-tight">E-WARGA <span class="text-indigo-400">RW6</span></h1>
+                <p class="text-[10px] font-bold text-slate-400 uppercase tracking-[0.2em] mt-1 text-center">Puri Agung 2 Digital</p>
             </div>
 
             <form onsubmit="handleLogin(event)" class="space-y-4">
                 <div class="relative group">
-                    <span class="material-icons absolute left-4 top-1/2 -translate-y-1/2 text-slate-400 group-focus-within:text-indigo-600 transition-colors">person</span>
+                    <span class="material-icons absolute left-4 top-1/2 -translate-y-1/2 text-indigo-200 group-focus-within:text-indigo-400 transition-colors">person</span>
                     <input type="text" id="login-user" placeholder="Username" 
-                           class="w-full bg-slate-50 border-2 border-slate-50 focus:border-indigo-500 focus:bg-white rounded-2xl py-4 pl-12 pr-4 text-sm font-bold text-slate-700 outline-none transition-all" required>
+                           class="w-full bg-white/50 border-2 border-indigo-50 focus:border-indigo-200 focus:bg-white rounded-2xl py-4 pl-12 pr-4 text-sm font-bold text-slate-600 outline-none transition-all placeholder:text-slate-300" required>
                 </div>
 
                 <div class="relative group">
-                    <span class="material-icons absolute left-4 top-1/2 -translate-y-1/2 text-slate-400 group-focus-within:text-indigo-600 transition-colors">lock</span>
+                    <span class="material-icons absolute left-4 top-1/2 -translate-y-1/2 text-indigo-200 group-focus-within:text-indigo-400 transition-colors">lock</span>
                     <input type="password" id="login-pass" placeholder="Password" 
-                           class="w-full bg-slate-50 border-2 border-slate-50 focus:border-indigo-500 focus:bg-white rounded-2xl py-4 pl-12 pr-4 text-sm font-bold text-slate-700 outline-none transition-all" required>
+                           class="w-full bg-white/50 border-2 border-indigo-50 focus:border-indigo-200 focus:bg-white rounded-2xl py-4 pl-12 pr-4 text-sm font-bold text-slate-600 outline-none transition-all placeholder:text-slate-300" required>
                 </div>
 
                 <button type="submit" 
-                        class="w-full bg-indigo-600 hover:bg-indigo-700 text-white py-4 rounded-2xl font-black text-sm shadow-xl shadow-indigo-200 transition-all active:scale-[0.98] mt-2 uppercase tracking-widest">
+                        class="w-full bg-indigo-400 hover:bg-indigo-500 text-white py-4 rounded-2xl font-black text-sm shadow-lg shadow-indigo-100 transition-all active:scale-[0.98] mt-2 uppercase tracking-widest">
                     Masuk Sekarang
                 </button>
             </form>
 
-            <p class="text-[10px] text-center text-slate-400 font-bold uppercase tracking-tighter mt-8">
+            <p class="text-[9px] text-center text-slate-300 font-bold uppercase tracking-widest mt-8">
                 &copy; 2026 Management System
             </p>
         </div>
     </div>
 
     <div class="absolute bottom-0 left-0 w-full leading-[0]">
-        <svg viewBox="0 0 500 150" preserveAspectRatio="none" class="h-32 w-full fill-indigo-700/30">
+        <svg viewBox="0 0 500 150" preserveAspectRatio="none" class="h-40 w-full fill-[#DBEAFE]/60">
             <path d="M0.00,49.98 C150.00,150.00 271.49,-25.66 500.00,49.98 L500.00,150.00 L0.00,150.00 Z"></path>
         </svg>
     </div>
