--- a/index.html
+++ b/index.html
@@ -518,7 +518,7 @@ body.dark span:not(.material-icons) {
 
             <div class="text-center mb-8">
                 <h1 class="text-2xl font-black text-slate-800 tracking-tight">E-WARGA <span class="text-teal-600">RW6</span></h1>
-                <p class="text-[10px] font-bold text-slate-400 uppercase tracking-[0.2em] mt-1">Puri Agung 2 Digital</p>
+                <p class="text-[10px] font-bold text-slate-400 uppercase tracking-[0.2em] mt-1">Perumahan Puri Agung 2</p>
             </div>
 
             <form onsubmit="handleLogin(event)" class="space-y-4">
@@ -541,7 +541,7 @@ body.dark span:not(.material-icons) {
             </form>
 
             <p class="text-[10px] text-center text-slate-400 font-bold uppercase tracking-widest mt-8">
-                &copy; 2026 Management System
+                &copy; 2026 puriagung2.com
             </p>
         </div>
     </div>
