--- a/index.html
+++ b/index.html
@@ -1802,6 +1802,7 @@ document.getElementById('detail-content').innerHTML = `
         </div>
     </div>
 `;
+  document.getElementById('detail-modal').style.display = 'flex';
 }
 function renderDetailItem(label, value) {
     return `
